--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,13 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="title">Welcome</div>
+  <div class="title">
+    Welcome
+    <div class="login">
+      <a href="">Login</a>
+      <a href="">Sign Up</a>
+    </div>
+  </div>
   <div class="sec_title">
     <p>
       <a href="http://google.com" target=_blank>Title</a>
@@ -28,7 +34,7 @@
     <!-- pro -->
     <div class="box">
       <img src="https://visualhunt.com/photos/l/7/chair-pet-cat.jpg" alt="">
-      <h1>Practice</h1>
+      <h1>Sunny day</h1>
       <p>Hello!</p>
       <a href="">
         <span>LINK</span>
@@ -37,13 +43,17 @@
     <!-- pro -->
     <div class="box">
       <img src="https://visualhunt.com/photos/l/7/chair-pet-cat.jpg" alt="">
-      <h1>Practice</h1>
+      <h1>Good job</h1>
       <p>Hello!</p>
       <a href="">
         <span>LINK</span>
       </a>
     </div>
-
+    <div class="test">
+      <div class="test_ani"></div>
+      <div class="test_ani"></div>
+      <div class="test_ani"></div>
+    </div>
   </div>
 </body>
 </html>
